--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,22 @@ buildscript {
 }
 
 plugins {
-    id "org.jetbrains.intellij" version "0.4.21"
+    id "org.jetbrains.intellij" version "0.4.26"
 }
 
 apply plugin: 'java'
+apply plugin: 'idea'
 
-sourceCompatibility = "1.8"
-targetCompatibility = "1.8"
+sourceCompatibility = "11"
+targetCompatibility = "11"
+
+idea {
+    project {
+        jdkName = "11"
+        languageLevel = "11"
+    }
+}
+
 
 tasks.withType(JavaCompile) { options.encoding = 'UTF-8' }
 
